[package]
name = "cifs-client-stream"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Read-only SMB1 media streaming backend for legacy local storage"
repository = "https://github.com/Vladislav-Kalinkin/cifs-client-stream.git"
homepage = "https://github.com/Vladislav-Kalinkin/cifs-client-stream"
readme = "README.md"
keywords = ["cifs", "smb", "smb1", "media", "streaming"]
categories = ["network-programming", "multimedia"]
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
ffi = []

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
bitflags = "1.3"
bytes = "1"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"
des = "0.8"
hex-literal = "0.4"
chrono = "0.4"
rand = "0.8"
num_enum = "0.5"
lazy_static = "1"
regex = "1"
itertools = "0.14"
tracing = "0.1"
